--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -257,91 +257,82 @@ jobs:
             build/legacy/tvgame*.dll
           if-no-files-found: error
 
-  # android-mod:
-  #   runs-on: ubuntu-20.04
-  #   needs: version
-  #   env:
-  #     SIGNING_KEY_ALIAS: "test_alias"
-  #     SIGNING_KEY_PASSWORD: "test_key_password"
-  #     SIGNING_STORE_PASSWORD: "test_store_password"
-  #     CI_ETL_DESCRIBE: ${{needs.version.outputs.describe}}
-  #     CI_ETL_TAG: ${{github.event.inputs.git_tag}}
-  #   container:
-  #     image: etlegacy/android-build
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #       with:
-  #         repository: etlegacy/etlegacy
-  #         submodules: true
-  #         ref: ${{ needs.version.outputs.commit_hash }}
+  android-mod:
+    runs-on: ubuntu-20.04
+    needs: version
+    env:
+      CI_ETL_DESCRIBE: ${{needs.version.outputs.describe}}
+      CI_ETL_TAG: ${{github.event.inputs.git_tag}}
+    container:
+      image: etlegacy/android-build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: etlegacy/etlegacy
+          submodules: true
+          ref: ${{ needs.version.outputs.commit_hash }}
 
-  #     - name: Setup JDK
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '17'
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-  #     - name: Build JoyStick Dependency
-  #       working-directory: ./app/libs/joystick
-  #       run: |
-  #         ./gradlew clean               --stacktrace --info
-  #         ./gradlew assembleRelease     --stacktrace --info
-  #         ./gradlew publishToMavenLocal --stacktrace --info
+      - name: Build JoyStick Dependency
+        working-directory: ./app/libs/joystick
+        run: |
+          ./gradlew clean               --stacktrace --info
+          ./gradlew publishToMavenLocal --stacktrace --info
 
-  #     - name: Upload JoyStick Dependency Artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: android-joystick-packages
-  #         path: '/root/.m2/repository/com/etlegacy/android/joystick/'
-  #         if-no-files-found: error
+      - name: Upload JoyStick Dependency Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-joystick-packages
+          path: '/root/.m2/repository/com/etlegacy/android/joystick/'
+          if-no-files-found: error
 
-  #     - name: Build Release
-  #       run: |
-  #         git config --global --add safe.directory "$GITHUB_WORKSPACE"
-  #         ./gradlew clean assembleRelease --stacktrace --info
-  #         ls -R
+      - name: Prepare intermediate files
+        run: |
+          # Extract relevant intermediate files without building the APK
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libcgame*.so .
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libui*.so .
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libcgame*.so .
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libui*.so .
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libcgame*.so .
+          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libui*.so .
+          ls -ltrah
 
-  #     - name: Prepare artifacts
-  #       run: |
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libcgame*.so .
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libui*.so .
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libcgame*.so .
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libui*.so .
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libcgame*.so .
-  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libui*.so .
-  #         ls -ltrah
+      - name: Upload arm64-v8a
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-arm64-mod
+          path: |
+            libcgame*arm64*.so
+            libui*arm64*.so
+          if-no-files-found: error
 
-  #     - name: Upload arm64-v8a
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: android-arm64-mod
-  #         path: |
-  #           libcgame*arm64*.so
-  #           libui*arm64*.so
-  #         if-no-files-found: error
+      - name: Upload x86
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-x86-mod
+          path: |
+            libcgame*i386.so
+            libui*i386.so
+          if-no-files-found: error
 
-  #     - name: Upload x86
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: android-x86-mod
-  #         path: |
-  #           libcgame*i386.so
-  #           libui*i386.so
-  #         if-no-files-found: error
-
-  #     - name: Upload x86_64
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: android-x86_64-mod
-  #         path: |
-  #           libcgame*x86_64.so
-  #           libui*x86_64.so
-  #         if-no-files-found: error
+      - name: Upload x86_64
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-x86_64-mod
+          path: |
+            libcgame*x86_64.so
+            libui*x86_64.so
+          if-no-files-found: error
 
   mod-merger:
     runs-on: ubuntu-20.04
-    needs: [ version, lnx64-mod, lnx32-mod, osx-mod, win-mod, win64-mod, lnx-aarch64-mod] #, android-mod ]
+    needs: [ version, lnx64-mod, lnx32-mod, osx-mod, win-mod, win64-mod, lnx-aarch64-mod, android-mod ]
     steps:
 
       - name: Info
@@ -363,12 +354,12 @@ jobs:
       - name: Create supported platform manifest
         shell: bash
         run: |
-          echo "win_x86 win_x86_64 lnx_x86 lnx_x86_64 macos_x86_64 macos_aarch64 lnx_armv8_64" > platforms.manifest
+          echo "win_x86 win_x86_64 lnx_x86 lnx_x86_64 macos_x86_64 macos_aarch64 lnx_armv8_64 android_aarch64 android_x86 android_x86_64" > platforms.manifest
 
       - name: Merge mod files
         shell: bash
         run: |
-          zip -rvj -MM legacy_*.pk3 platforms.manifest platforms/cgame* platforms/ui*
+          zip -rvj -MM legacy_*.pk3 platforms.manifest platforms/cgame* platforms/ui* platforms/libcgame* platforms/libui*
 
       - name: Create mod zip
         shell: bash
