--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -13,7 +13,7 @@ on:
         default: "297"
 
 permissions:
-  contents: write         # Grants permission to push changes
+  contents: write-all         # Grants permission to push changes
 
 jobs:
   version:
