--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -458,3 +458,23 @@ jobs:
           path: |
             build/etlegacy-*.tar.gz
           if-no-files-found: error
+
+  commit:
+    runs-on: ubuntu-latest
+    needs: [ version, lnx64 ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: lnx64-packages
+          path: build
+
+      - name: Commit new build
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add build/etlegacy-*.tar.gz
+          git commit -m "Built ${{needs.version.outputs.describe}}"
+          git push
